fix crashes on model changes

QAbstractItemModel::changePersistentIndex() is heavily underdocumented, so I
probably got it wrong. Use beginResetModel()/endResetModel() to guard "global"
changes in the model instead of layoutAboutToBeChanged()/layoutChanged(). This
should hopefully get rid of all the spurious crashes deep in the Qt model
implementation.

BUG:294097
CCBUG:254090
FIXED-IN:4.8.1